# cmake_template

./: CMakeLists.txt  Config.h.in  readme.md
include/: lib.h
src/: lib.cpp  main.cpp
